# cookiecutter-pycli

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __main__.py
